tests/compile_fail/schema_on_enum.rs
use acube::prelude::*;

#[derive(AcubeSchema, Debug)]
pub enum NotAStruct {
    A,
    B,
}

fn main() {}
