tests/compile_fail/schema_on_enum.stderr
error: AcubeSchema can only be derived on structs
 --> $WORKSPACE/tests/compile_fail/schema_on_enum.rs
  |
  | pub enum NotAStruct {
  |          ^^^^^^^^^^
